--- a/less/variables.less
+++ b/less/variables.less
@@ -17,7 +17,9 @@
 @oddrowbg: #F8F9F9;
 @green: #26B282;
 @soft: #8ACFCF;
-
+@white:#ffffff;
+@blue: #3586C8;
+@orange: #ff5715;
 .m-4 {
     margin: 1.5rem !important;
 }
