--- a/less/start.less
+++ b/less/start.less
@@ -1047,10 +1047,13 @@ footer {
 
     .btn-primary:not(:disabled):not(.disabled).active, .btn-primary:not(:disabled):not(.disabled):active, .show > .btn-primary.dropdown-toggle {
         border-color: @greybg;
-        background: @highlightcolordark;
+        background: @highlightcolordark !important;
         outline: none !important;
     }
+.btn-primary:not([disabled]):not(.disabled).active, .btn-primary:not([disabled]):not(.disabled):active, .show > .btn-primary.dropdown-toggle{
 
+
+}
 .content {
 
     .btn-soft {
@@ -1070,14 +1073,15 @@ footer {
 
     .btn-primary {
         display: flex;
-        position:relative;
+        position: relative;
         border: 0;
-        text-align: center;
+        text-align: center !important;
+        justify-content: center;
         text-transform: uppercase;
         font-size: 14px;
         font-weight: bold;
-        border-radius: 80px;
-        background: @maincolor;
+        border-radius: 80px !important;
+        background: @maincolor !important;
         padding: 0.7rem 2rem;
         box-shadow: 0 0 10px rgba(0,0,0,0.4);
         z-index: 20;
@@ -1097,19 +1101,17 @@ footer {
 
 
 
-        
-         
 
+
+
+        .fa {
+            margin-left: 10px;
+            margin-right: 10px;
+        }
+
+        &[type="submit"] {
             .fa {
-                margin-left: 10px;
-                margin-right: 10px;
             }
-
-            &[type="submit"] {
-                .fa {
-               
-                }
-           
         }
     }
 
@@ -1639,3 +1641,194 @@ select:active, select:hover {
         color: @white;
     }
 }
+
+
+
+/*Login styles*/
+.loginholder {
+    .group {
+        position: relative;
+        margin-bottom: 45px;
+
+        .fa{
+
+            position:absolute; bottom:10px;
+            color:@maincolor;
+        }
+    }
+
+    input {
+        font-size: 14px;
+        padding: 10px 10px 10px 5px;
+        display: block;
+        width: 300px;
+        border: none;
+        border-bottom: 1px solid @thirdiarycolor;
+        text-indent:25px;
+        font-family:"Roboto", sans-serif;
+        font-weight:bold;
+       color:@bodytext;
+    }
+
+    input:focus {
+        outline: none;
+    }
+    /* LABEL ======================================= */
+    label {
+        color: @thirdiarycolor;
+        font-size: 14px;
+        font-weight: normal;
+        text-transform: none;
+        position: absolute;
+        pointer-events: none;
+        left: 25px;
+        top: 10px;
+        transition: 0.2s ease all;
+        -moz-transition: 0.2s ease all;
+        -webkit-transition: 0.2s ease all;
+    }
+    /* active state */
+    input:focus ~ label, input:valid ~ label {
+        top: -20px;
+        left:0;
+        font-size: 14px;
+        color: @maincolor;
+    }
+    /* BOTTOM BARS ================================= */
+    .bar {
+        position: relative;
+        display: block;
+        width: 300px;
+    }
+
+    .bar:before, .bar:after {
+        content: '';
+        height: 2px;
+        width: 0;
+        bottom: 0px;
+        position: absolute;
+        background: @maincolor;
+        transition: 0.2s ease all;
+        -moz-transition: 0.2s ease all;
+        -webkit-transition: 0.2s ease all;
+    }
+
+    .bar:before {
+        left: 50%;
+    }
+
+    .bar:after {
+        right: 50%;
+    }
+    /* active state */
+    input:focus ~ .bar:before, input:focus ~ .bar:after {
+        width: 50%;
+    }
+    /* HIGHLIGHTER ================================== */
+    .highlight {
+        position: absolute;
+        height: 60%;
+        width: 100px;
+        top: 25%;
+        left: 0;
+        pointer-events: none;
+        opacity: 0.5;
+    }
+    /* active state */
+    input:focus ~ .highlight {
+        -webkit-animation: inputHighlighter 0.3s ease;
+        -moz-animation: inputHighlighter 0.3s ease;
+        animation: inputHighlighter 0.3s ease;
+    }
+    /* ANIMATIONS ================ */
+    @-webkit-keyframes inputHighlighter {
+        from {
+            background: @highlightcolor;
+        }
+
+        to {
+            width: 0;
+            background: transparent;
+        }
+    }
+
+    @-moz-keyframes inputHighlighter {
+        from {
+            background: @highlightcolor;
+        }
+
+        to {
+            width: 0;
+            background: transparent;
+        }
+    }
+
+    @keyframes inputHighlighter {
+        from {
+            background: @highlightcolor;
+        }
+
+        to {
+            width: 0;
+            background: transparent;
+        }
+    }
+
+    .ltext {
+        text-align: center;
+        color: @thirdiarycolor;
+        font-size: 13px;
+    }
+    }
+#login {
+    position: relative;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    background: url("../images/login.jpg") 0 0 no-repeat;
+    background-size: cover;
+    margin-left: 0;
+
+    &:before {
+        position: absolute;
+        content: "";
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(42deg, @maincolor 0%, @highlightcolor 50%, @secondarycolor 100%);
+        opacity:0.8;
+    }
+
+    .loginholder {
+        display: flex;
+        flex: 1 1 auto;
+        position: absolute;
+        height: 100%;
+        padding: 20px;
+        justify-content: space-between;
+        align-items: center;
+        flex-direction: column;
+        background: @white;
+        box-shadow: 0 0 10px rgba(0,0,0,0.4);
+        position: absolute;
+        align-self: stretch;
+
+        h1 {
+            align-self: flex-start;
+            padding-top: 20px;
+        }
+
+        .ltext {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+    }
+}
+
