--- a/less/start.less
+++ b/less/start.less
@@ -1038,12 +1038,16 @@ footer {
 
 
 
-    .card-header {
-        padding: .75rem 1.25rem;
-        margin-bottom: 0;
-        background-color: @greybg;
-        border-bottom: 0px solid rgba(0,0,0,.125);
+.card-header {
+    padding: .95rem;
+    margin-bottom: 0;
+    background-color: @highlightcolor;
+    border-bottom: 0px solid rgba(0,0,0,.125);
+
+    h5 {
+        color: @bodytext;
     }
+}
 
     .btn-primary:not(:disabled):not(.disabled).active, .btn-primary:not(:disabled):not(.disabled):active, .show > .btn-primary.dropdown-toggle {
         border-color: @greybg;
@@ -1500,17 +1504,19 @@ label{
         }
     }
 }
+h5 {
+    font-size: 12px;
+    font-weight: normal;
+    padding-bottom: 5px;
+    color: @thirdiarycolor;
+    text-transform: uppercase;
+    flex: 0 0 100%;
+}
 .priority{background:@oddrowbg;
           padding:10px;
     display:flex;
     flex-wrap:wrap;
-    h5{font-size:12px;
-       font-weight:normal;
-       padding-bottom:5px;
-       color:@thirdiarycolor;
-       text-transform:uppercase;
-        flex:0 0 100%;
-    }
+    
 }
 .badge {
     align-self: stretch;
@@ -1832,3 +1838,86 @@ select:active, select:hover {
     }
 }
 
+/*Circular*/
+.flex-wrapper {
+    display: flex;
+    flex-flow: row nowrap;
+}
+
+
+
+.circular-chart {
+    display: block;
+    margin: 10px auto;
+    max-width: 100px;
+    height: 100px;
+
+
+   
+}
+.single-chart{
+  
+    display:flex;
+    flex-direction:column;
+    justify-content:center;
+    align-items:center;
+
+    a{
+        text-align:center;
+        font-size:12px;
+    }
+}
+.circle-bg {
+    fill: none;
+    stroke: @greybg;
+    stroke-width: 3.8;
+}
+
+.circle {
+    fill: none;
+    stroke-width: 2.8;
+    stroke-linecap: round;
+    animation: progress 1s ease-out forwards;
+}
+
+@keyframes progress {
+    0% {
+        stroke-dasharray: 0 100;
+    }
+}
+
+.circular-chart.pri-one .circle {
+    stroke: @maincolor;
+}
+
+.circular-chart.pri2 .circle {
+    stroke: @orange;
+}
+
+.circular-chart.pri3 .circle {
+    stroke: @secondarycolor;
+}
+.circular-chart.pri4 .circle {
+    stroke: @blue;
+}
+
+.circular-chart.pri5 .circle {
+    stroke: @green;
+}
+.percentage {
+    fill: #666;
+    font-family: sans-serif;
+    font-size: 0.5em;
+    text-anchor: middle;
+}
+
+.prioritycards {
+    .card {
+        width: 18%;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin-left:7px;
+        margin-right:7px;
+    }
+}
